✨ Fix font size on small width screens

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,37 @@ body {
   margin-top: 1rem;
 }
 
+h1 {
+  text-transform: uppercase;
+  font-size: 3rem;
+  margin: 0;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+@media only screen and (max-width: 800px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.6rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  h1 {
+    font-size: 1.6rem;
+  }
+  h2 {
+    font-size: 1.2rem;
+  }
+  span {
+    font-size: 0.8rem;
+  }
+}
+
 .clocks {
   display: flex;
   flex-wrap: wrap;
