--- a/src/components/Clock/styles.css
+++ b/src/components/Clock/styles.css
@@ -4,12 +4,6 @@
   text-align: center;
 }
 
-h1 {
-  text-transform: uppercase;
-  font-size: 50px;
-  margin: 0;
-}
-
 .clock {
   min-width: 27rem;
   min-height: 27rem;
